Fix overlapping issue with nav and header sections

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,7 +4,7 @@ nav {
   background-color: #4056A1;
   color: #FFFFFF;
   padding: 0 1.5em;
-  position: fixed;
+  position: sticky;
   display: flex;
   align-items: center;
   justify-content: space-between;
